--- a/WebsiteStore/CMakeLists.txt
+++ b/WebsiteStore/CMakeLists.txt
@@ -10,4 +10,4 @@ add_library(
         WebsiteStore.cpp
 )
 
-target_link_libraries(WebsiteStore)
+target_link_libraries(WebsiteStore -lmysqlcppconn)
